--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "kue-unique": "^1.0.2",
     "lodash": "^4.17.4",
     "node-redis-warlock": "^0.2.0",
+    "moment": "^2.18.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
@@ -77,7 +78,6 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-mocha-test": "^0.13.2",
     "jshint-stylish": "^2.2.1",
-    "mocha": "^3.5.0",
-    "moment": "^2.18.1"
+    "mocha": "^3.5.0"
   }
 }
